# sqlite_sphere

./: CMakeLists.txt  NOTICE  README
src/: base64.c  base64.h  box.cc  box.h  circle.cc  circle.h  ellipse.cc  ellipse.h  euler.cc  euler.h  line.cc  line.h  output.cc  output.h  path.cc  path.h  point.cc  point.h  polygon.cc  polygon.h  sbuffer.cc  sbuffer.h  serialiser.cc  serialiser.h  serialiser_helper.h  types.h  udf_helpers.h  udf_sphere.cc  udf_sphere_area.cc  udf_sphere_area.h  udf_sphere_box.cc  udf_sphere_box.h  udf_sphere_center.cc  udf_sphere_center.h  udf_sphere_circle.cc  udf_sphere_circle.h  udf_sphere_circum.cc  udf_sphere_circum.h  udf_sphere_dist.cc  udf_sphere_dist.h  (+24 more)
test/: test.db
test/expected/: box.sql.out  circle.sql.out  circle_extended.sql.out  ellipse.sql.out  line.sql.out  path.sql.out  points.sql.out  poly.sql.out
test/setup/: test_spherebox.sql  test_spherecircle.sql  test_spherepath.sql  test_spherepoint.sql  test_spherepolygon.sql
test/test/: box.sql  circle.sql  circle_extended.sql  ellipse.sql  euler.sql  line.sql  path.sql  points.sql  poly.sql
